When site was deployed a display issue was found in the about page on mobile devices. Issue caused by line height. Issue resolved and readme updated accordingly.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,20 +43,18 @@ html body {
     color: #fafafaad;
     text-align: center;
     padding: 25px 5px;
-    height: 10%;
     text-decoration: underline;
     line-height: 2;
 }
 
 .about-text{
-    line-height: 2;
+    line-height: 1;
     font-family: 'Press Start 2P', cursive , sans-serif;
     color: #fafafaad;
     text-align: center;
     word-spacing: 1px;
     display: inline-block;
-    margin:10px;
-    padding: 25px 5px;
+    
 }
 
 /* Footer styling */
@@ -114,22 +112,19 @@ footer {
     height: 770px;
 }
 
-/* About Gallery styling*/
 #about-photo{
-    clear: both;
-    column-count: 3;
-    line-height: 1;
-    column-gap: 0;
+    column-count: 4;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom:20px;
 }
 
 #about-photo img{
-    clear: both;
-    line-height: 1;
-    margin-top: 10px;
+    margin-top:10px;
+    margin-bottom:10px;
+    height:50%;
     width: 100%;
-    height: 60%;
-    padding-top: 20px;
-    padding-bottom:20px;
+    padding: 10px;
 }
 
 /*Video Styling */
@@ -303,8 +298,6 @@ footer{
 .title-name{
     padding:25px 5px;
 }
-
-.
 
 #music-video{
     column-count: 1;
